# Splitter

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  splitter.cbp  splitter.depend  splitter.depend.orig  splitter.layout  splitter.layout.orig
example/: B2DWorld.cpp  B2DWorld.h  main.cpp
include/: B2BodySplitCallback.h  B2DWorld.h  B2vecHasher.h  BodyListener.h  Box2DConstants.h  RayCastCallback.h  SFMLB2DebugDraw.h  Splitter.h  TextureMapper.h
include/splitter/: Splitter.h
src/: B2DWorld.cpp  BodyListener.cpp  RayCastCallback.cpp  SFMLB2DebugDraw.cpp  Splitter.cpp  TextureMapper.cpp  main.cpp
